# stalagmite

./: .gitignore  Cargo.toml  README.md
criterion-reports/: README.md
criterion-reports/073025/: README.md
criterion-reports/073025/flint-style/intpoly-operations/IntPoly addition - different sizes/report/: index.html
criterion-reports/073025/flint-style/intpoly-operations/report/: index.html
criterion-reports/073025/rust-style/IntPoly addition - same size/report/: index.html
criterion-reports/073025/rust-style/IntPoly addition - with zero/report/: index.html
criterion-reports/073025/rust-style/IntPoly sum - large polynomials/report/: index.html
stalagmite/: Cargo.toml
stalagmite-base/: Cargo.toml  README.md
stalagmite-base/src/: factored.rs  integer.rs  lib.rs  natural.rs  rational.rs  traits.rs
stalagmite-base/src/factor/: mod.rs  prime_cache.rs  tests.rs  trial_div.rs
stalagmite-base/src/factor/trial_division/: mod.rs  trial.rs  trial_range.rs  trial_tree.rs
stalagmite-base/src/is_prime/: mod.rs
stalagmite-bench/: Cargo.toml  README.md
stalagmite-bench/benches/: intpoly_operations.rs  intpoly_sum.rs
stalagmite-bench/benches/poly/intpoly/: add.rs  mul.rs  neg.rs  rem.rs  sub.rs
stalagmite-bench/benches/poly/zz_poly/: add.rs  neg.rs
stalagmite-bench/benches/zn/: add.rs  mul.rs  sub.rs
stalagmite-bench/src/: lib.rs
stalagmite-fq/: Cargo.toml
stalagmite-lat/: Cargo.toml
stalagmite-mat/: Cargo.toml
stalagmite-mpoly/: Cargo.toml
stalagmite-nf/: Cargo.toml
stalagmite-poly/: Cargo.toml
stalagmite-poly/examples/: failed_tests.rs
stalagmite-poly/src/: generic.rs  lib.rs  poly.rs
stalagmite-poly/src/intpoly/: mod.rs
stalagmite-poly/src/intpoly/arithmetic/: add.rs  mod.rs  mul.rs  mul_classical.rs  mul_karatsuba.rs  mul_ks.rs  mullow.rs  neg.rs  rem.rs  sqr.rs  sub.rs
stalagmite-poly/src/intpoly/comparison/: mod.rs
stalagmite-poly/src/intpoly/conversion/: mod.rs
stalagmite-poly/src/qq_poly/: mod.rs
stalagmite-poly/src/qq_poly/arithmetic/: add.rs  mod.rs  mul.rs  sub.rs
stalagmite-poly/src/qq_poly/conversion/: mod.rs
stalagmite-poly/src/zz_poly/: mod.rs
stalagmite-poly/src/zz_poly/arithmetic/: add.rs  mod.rs  mul.rs  mul_classical.rs  mul_karatsuba.rs  mul_ks.rs  mul_ss.rs  mullow.rs  neg.rs  rem.rs  sqr.rs  sub.rs
stalagmite-poly/src/zz_poly/comparison/: mod.rs
stalagmite-poly/src/zz_poly/conversion/: mod.rs
stalagmite-poly/test/: generic.rs  lib.rs  poly.rs
stalagmite-poly/test/intpoly/: mod.rs
stalagmite-poly/test/intpoly/arithmetic/: add.rs
stalagmite-poly/test/intpoly/comparison/: mod.rs
stalagmite-poly/test/intpoly/conversion/: mod.rs
stalagmite-poly/test/zz_poly/: mod.rs
stalagmite-poly/test/zz_poly/arithmetic/: add.rs
stalagmite-poly/test/zz_poly/conversion/: mod.rs
stalagmite-qp/: Cargo.toml
stalagmite-vec/: Cargo.toml
stalagmite-vec/examples/: test.rs
stalagmite-vec/src/: lib.rs
stalagmite-zn/: Cargo.toml
stalagmite-zn/examples/: test.rs
stalagmite-zn/src/: lib.rs
stalagmite-zn/src/arithmetic/: add.rs  inv.rs  mod.rs  mul.rs  neg.rs  sub.rs
stalagmite/src/: lib.rs  main.rs
(+873 files in other folders)
