[package]
name = "stalagmite-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
stalagmite-poly = { path = "../stalagmite-poly" }
malachite = "0.6.1"
rand = { version = "0.9", features = ["small_rng"] }


[[bench]]
name = "zz_poly_add"
path = "benches/poly/zz_poly/add.rs"
harness = false

[[bench]]
name = "zz_poly_sub"
path = "benches/poly/zz_poly/sub.rs"
harness = false

[[bench]]
name = "zz_poly_neg"
path = "benches/poly/zz_poly/neg.rs"
harness = false

[[bench]]
name = "zz_poly_mul"
path = "benches/poly/zz_poly/mul.rs"
harness = false

[[bench]]
name = "zz_poly_sqr"
path = "benches/poly/zz_poly/sqr.rs"
harness = false

[[bench]]
name = "zz_poly_mullow"
path = "benches/poly/zz_poly/mullow.rs"
harness = false

[[bench]]
name = "zz_poly_rem"
path = "benches/poly/zz_poly/rem.rs"
harness = false
